calendar: use normal type for EventPluginsManager, don't use singleton

It fixes that when there are multiple calendar applets, each applet
doesn't have its own EventPluginsManager.

BUG: 454846
FIXED-IN: 5.26