components/calendar/calendarplugin.cpp
@@ -13,20 +13,12 @@
 #include <QQmlEngine>
 #include <QtQml>
 
-static QObject *event_plugins_manager_provider(QQmlEngine *engine, QJSEngine *scriptEngine)
-{
-    Q_UNUSED(engine)
-    Q_UNUSED(scriptEngine)
-
-    return new EventPluginsManager();
-}
-
 void CalendarPlugin::registerTypes(const char *uri)
 {
     Q_ASSERT(uri == QByteArray("org.kde.plasma.workspace.calendar"));
     qmlRegisterType<Calendar>(uri, 2, 0, "Calendar");
+    qmlRegisterType<EventPluginsManager>(uri, 2, 0, "EventPluginsManager");
     qmlRegisterAnonymousType<QAbstractItemModel>(uri, 1);
     qmlRegisterAnonymousType<QAbstractListModel>(uri, 1);
-    qmlRegisterSingletonType<EventPluginsManager>(uri, 2, 0, "EventPluginsManager", event_plugins_manager_provider);
     qmlRegisterUncreatableType<EventDataDecorator>(uri, 2, 0, "EventDataDecorator", QStringLiteral("Unable to create EventDataDecorator from QML"));
 }
